# energy-projects-tracking

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
energy_projects_tracking/: gcp_utils.py  news_scraper.py
infrastructure/: data.tf  iam.tf  k8s.tf  main.tf  providers.tf  vpc.tf
