[tool.poetry]
name = "energy-projects-tracking"
version = "0.1.0"
description = ""
authors = ["hk"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
beautifulsoup4  = "^4.13.1"
selenium = "^4.0.0"
webdriver-manager = "^4.0.0"
google-cloud-storage = "^3.0.0"
google-cloud-secret-manager = "^2.0.0"
google-auth = "^2.0.0"
google-cloud-bigquery = "^3.0.0"
pandas = "^2.0.0"
ftfy = "^6.1.1"
pyarrow = "^14.0.0"
numpy = "1.26.4"
pandas-gbq = "^0.25.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
coverage = "^7.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
jupyter = "^1.0.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
